--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "infodash",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://api.darksky.net",
   "dependencies": {
     "dateformat": "^3.0.2",
     "material-ui": "^1.0.0-beta.23",
